Add support for Docker containers

--- a/src/CustomTimelineEras.XConnectIndexer/CustomTimelineEras.XConnectIndexer.csproj
+++ b/src/CustomTimelineEras.XConnectIndexer/CustomTimelineEras.XConnectIndexer.csproj
@@ -32,6 +32,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Docker|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>pdbonly</DebugType>
@@ -52,6 +61,7 @@
     <Content Include="App_Data\config\sitecore\CustomTimelineEras\sc.Xdb.Collection.Search.IndexTruncation.xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\Docker.pubxml" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
   </ItemGroup>
   <PropertyGroup>
