--- a/src/CustomTimelineEras/App_Config/Include/z.CustomTimelineEras.Serialization/CustomSerializationFolder.config
+++ b/src/CustomTimelineEras/App_Config/Include/z.CustomTimelineEras.Serialization/CustomSerializationFolder.config
@@ -6,7 +6,7 @@
     <unicorn>
       <defaults>
         <targetDataStore>
-          <patch:attribute name="physicalRootPath">C:\Projects\Sitecore\CustomTimelineEras\src\CustomTimelineEras\App_Data</patch:attribute>
+          <patch:attribute name="physicalRootPath">C:\Projects\Sitecore\sitecore-custom-timeline-eras\src\CustomTimelineEras\App_Data</patch:attribute>
         </targetDataStore>
       </defaults>
     </unicorn>
