Move Show as Era field to out-of-the-box Outcome Definition template
The Sitecore Forms submit action outcome selector only allows selection of outcomes created with the out-of-the-box Outcome Definition template.

--- a/src/CustomTimelineEras/App_Config/Include/z.CustomTimelineEras.Serialization/DefaultConfig.config
+++ b/src/CustomTimelineEras/App_Config/Include/z.CustomTimelineEras.Serialization/DefaultConfig.config
@@ -10,7 +10,7 @@
             <include name="Media Items" database="master" path="/sitecore/media library/Custom Timeline Eras" />
             <include name="Superhero Outcome Group" database="master" path="/sitecore/system/Marketing Control Panel/Taxonomies/Outcome group/Superhero" />
             <include name="Outcome Definitions" database="master" path="/sitecore/system/Marketing Control Panel/Outcomes/Custom Timeline Eras" />
-            <include name="Custom Outcome Definition Insert Option Rule" database="master" path="/sitecore/system/Settings/Rules/Insert Options/Rules/Custom Outcome Definition" />
+            <include name="Show as Era Field" database="master" path="/sitecore/templates/System/Analytics/Outcome/Outcome Definition/Experience Profile Options" />
             <include name="Templates" database="master" path="/sitecore/templates/Custom Timeline Eras" />
           </predicate>
 
